--- a/assets/package.json
+++ b/assets/package.json
@@ -90,6 +90,7 @@
     "qs": "6.14.0",
     "query-string": "8.1.0",
     "react": "19.2.2",
+    "react-complex-tree": "2.6.1",
     "react-copy-to-clipboard": "5.1.0",
     "react-diff-viewer": "3.1.1",
     "react-dom": "19.2.2",
