--- a/static/addons/eks.yaml
+++ b/static/addons/eks.yaml
@@ -2676,6 +2676,14 @@
   publisher: eks
 - name: aws-mountpoint-s3-csi-driver
   versions:
+  - version: v2.3.0-eksbuild.1
+    compatibilities:
+    - '1.34'
+    - '1.33'
+    - '1.32'
+    - '1.31'
+    - '1.30'
+    - '1.29'
   - version: v2.2.1-eksbuild.1
     compatibilities:
     - '1.34'
@@ -7348,6 +7356,16 @@
   publisher: Spacelift Inc.
 - name: splunk_splunk-otel-collector-chart
   versions:
+  - version: v0.142.0-eksbuild.1
+    compatibilities:
+    - '1.34'
+    - '1.33'
+    - '1.32'
+    - '1.31'
+    - '1.30'
+    - '1.29'
+    - '1.28'
+    - '1.27'
   - version: v0.140.0-eksbuild.1
     compatibilities:
     - '1.34'
