--- a/static/compatibilities/aws-efs-csi-driver.yaml
+++ b/static/compatibilities/aws-efs-csi-driver.yaml
@@ -3,6 +3,15 @@ git_url: https://github.com/kubernetes-sigs/aws-efs-csi-driver
 release_url: https://github.com/kubernetes-sigs/aws-efs-csi-driver/releases/tag/v{vsn}
 helm_repository_url: https://kubernetes-sigs.github.io/aws-efs-csi-driver
 versions:
+- version: 2.3.0
+  kube: []
+  requirements: []
+  incompatibilities: []
+  summary: null
+  chart_version: 3.4.0
+  images: ['public.ecr.aws/csi-components/csi-node-driver-registrar:v2.15.0-eksbuild.3',
+    'public.ecr.aws/csi-components/csi-provisioner:v6.1.0-eksbuild.2', 'public.ecr.aws/csi-components/livenessprobe:v2.17.0-eksbuild.3',
+    'public.ecr.aws/efs-csi-driver/amazon/aws-efs-csi-driver:v2.3.0']
 - version: 2.2.0
   kube: ['1.35', '1.34', '1.33', '1.32', '1.31', '1.30', '1.29', '1.28', '1.27', '1.26',
     '1.25', '1.24', '1.23', '1.22', '1.21', '1.20', '1.19', '1.18', '1.17']
