--- a/static/compatibilities/traefik.yaml
+++ b/static/compatibilities/traefik.yaml
@@ -3,25 +3,25 @@ git_url: https://github.com/traefik/traefik
 release_url: https://github.com/traefik/traefik/releases/tag/v{vsn}
 helm_repository_url: https://traefik.github.io/charts
 versions:
-- version: 3.6.5
+- version: 3.6.6
   kube: ['1.35', '1.34', '1.33', '1.32']
   requirements: []
   incompatibilities: []
   summary:
     helm_changes: ''
     chart_updates: []
-    features: ['From v3.6.0 (baseline): added new ACME certificatesResolvers options;
-        added least-time and HighestRandomWeight load-balancing strategies; added
-        TCP (active) healthchecks and passive health checks; added Knative provider
-        and improvements to Kubernetes/Gateway API and Ingress publishing (including
-        ExternalName services); added multi-layer routing; added HTTP/2 HPACK table
-        size options; and several dashboard/UI tweaks.', v3.6.5 is a patch release
-        with no new features called out in the notes you provided; it focuses on fixes/behavior
-        clarifications.]
-    breaking_changes: ['Access logs will now also be printed for rejected requests;
-        the release note explicitly warns about this new behavior, so log volume/content
-        may change and could affect log-based alerts/costs.']
-  chart_version: 38.0.1
+    features: ['From v3.6.0: new ACME certificate resolver options to expand certificate
+        management configuration.', 'From v3.6.0: added least-time / HighestRandomWeight
+        load-balancing strategies and passive + TCP health checks for better resiliency
+        and routing behavior.', 'From v3.6.0: Kubernetes-related enhancements including
+        Knative provider, Gateway API bump to v1.4.0, support for ExternalName services,
+        and CRD weight improvements.', 'From v3.6.0: server/routing enhancements including
+        multi-layer routing and HTTP/2 HPACK table size options.']
+    breaking_changes: ["No explicit breaking changes are listed in the provided notes\
+        \ for v3.6.0 or v3.6.6, but v3.6.0 explicitly calls out to read the migration\
+        \ guide\u2014treat that as a potential source of breaking/config behavior\
+        \ changes and validate against your current config."]
+  chart_version: 38.0.2
   images: []
 - version: 3.6.0
   kube: ['1.35', '1.34', '1.33', '1.32']
