--- a/static/addons/eks.yaml
+++ b/static/addons/eks.yaml
@@ -3300,6 +3300,14 @@
   publisher: cloudsoft
 - name: coredns
   versions:
+  - version: v1.13.1-eksbuild.1
+    compatibilities:
+    - '1.34'
+    - '1.33'
+  - version: v1.12.4-eksbuild.6
+    compatibilities:
+    - '1.34'
+    - '1.33'
   - version: v1.12.4-eksbuild.1
     compatibilities:
     - '1.34'
@@ -3320,6 +3328,14 @@
     compatibilities:
     - '1.34'
     - '1.33'
+  - version: v1.11.4-eksbuild.28
+    compatibilities:
+    - '1.34'
+    - '1.33'
+    - '1.32'
+    - '1.31'
+    - '1.30'
+    - '1.29'
   - version: v1.11.4-eksbuild.24
     compatibilities:
     - '1.34'
@@ -6685,6 +6701,13 @@
   publisher: NetApp Inc.
 - name: new-relic_kubernetes-operator
   versions:
+  - version: v0.1.12-eksbuild.1
+    compatibilities:
+    - '1.33'
+    - '1.32'
+    - '1.31'
+    - '1.30'
+    - '1.29'
   - version: v0.1.11-eksbuild.1
     compatibilities:
     - '1.32'
