--- a/static/compatibilities.yaml
+++ b/static/compatibilities.yaml
@@ -7858,26 +7858,63 @@ addons:
   release_url: https://github.com/linkerd/linkerd2/releases/tag/{vsn}
   helm_repository_url: https://helm.linkerd.io/stable
   versions:
-  - version: 2.14
+  - version: 2.19.0
+    kube: ['1.34', '1.33', '1.32', '1.31', '1.30', '1.29']
+    requirements: []
+    incompatibilities: []
+    summary: null
+  - version: 2.19.0
+    kube: ['1.34', '1.33', '1.32', '1.31', '1.30', '1.29']
+    requirements: []
+    incompatibilities: []
+    summary: null
+  - version: 2.18.0
+    kube: ['1.32', '1.31', '1.30', '1.29', '1.28', '1.27', '1.26', '1.25', '1.24',
+      '1.23', '1.22']
+    requirements: []
+    incompatibilities: []
+    summary: null
+  - version: 2.17.0
+    kube: ['1.31', '1.30', '1.29', '1.28', '1.27', '1.26', '1.25', '1.24', '1.23',
+      '1.22']
+    requirements: []
+    incompatibilities: []
+    summary: null
+  - version: 2.16.0
+    kube: ['1.29', '1.28', '1.27', '1.26', '1.25', '1.24', '1.23', '1.22']
+    requirements: []
+    incompatibilities: []
+    summary: null
+  - version: 2.15.0
+    kube: ['1.29', '1.28', '1.27', '1.26', '1.25', '1.24', '1.23', '1.22']
+    requirements: []
+    incompatibilities: []
+    summary: null
+  - version: 2.14.0
     kube: ['1.28', '1.27', '1.26', '1.25', '1.24', '1.23', '1.22', '1.21']
     requirements: []
     incompatibilities: []
-  - version: 2.13
+    summary: null
+  - version: 2.13.0
     kube: ['1.28', '1.27', '1.26', '1.25', '1.24', '1.23', '1.22', '1.21']
     requirements: []
     incompatibilities: []
-  - version: 2.12
+    summary: null
+  - version: 2.12.0
     kube: ['1.24', '1.23', '1.22', '1.21']
     requirements: []
     incompatibilities: []
-  - version: 2.11
+    summary: null
+  - version: 2.11.0
     kube: ['1.23', '1.22', '1.21', '1.20', '1.19', '1.18', '1.17']
     requirements: []
     incompatibilities: []
-  - version: 2.1
+    summary: null
+  - version: 2.10.0
     kube: ['1.23', '1.22', '1.21', '1.20', '1.19', '1.18', '1.17', '1.16']
     requirements: []
     incompatibilities: []
+    summary: null
   name: linkerd
 - icon: https://avatars.githubusercontent.com/u/51335366?s=48&v=4
   git_url: https://github.com/longhorn/longhorn
