--- a/static/compatibilities.yaml
+++ b/static/compatibilities.yaml
@@ -4401,81 +4401,112 @@ addons:
   release_url: https://github.com/coredns/coredns/releases/tag/{vsn}
   helm_repository_url: https://coredns.github.io/helm
   versions:
+  - version: 1.12.0
+    kube: ['1.33']
+    requirements: []
+    incompatibilities: []
+    summary: null
+    chart_version: 1.42.2
+    images: ['coredns/coredns:1.12.0']
   - version: 1.11.3
     kube: ['1.31']
     requirements: []
     incompatibilities: []
-    chart_version: 1.32.0
+    summary: null
+    chart_version: 1.36.1
+    images: ['coredns/coredns:1.11.3']
   - version: 1.11.1
     kube: ['1.29']
     requirements: []
     incompatibilities: []
-    chart_version: 1.26.0
+    summary: null
+    chart_version: 1.31.0
+    images: ['coredns/coredns:1.11.1']
   - version: 1.10.1
     kube: ['1.27']
     requirements: []
     incompatibilities: []
-    chart_version: 1.21.0
+    summary: null
+    chart_version: 1.24.5
+    images: ['coredns/coredns:1.10.1']
   - version: 1.9.3
     kube: ['1.25']
     requirements: []
     incompatibilities: []
-    chart_version: 1.19.4
+    summary: null
+    chart_version: 1.19.6
+    images: ['coredns/coredns:1.9.3']
   - version: 1.8.6
     kube: ['1.23']
     requirements: []
     incompatibilities: []
-    chart_version: 1.16.5
+    summary: null
+    chart_version: 1.16.6
+    images: ['coredns/coredns:1.8.6']
   - version: 1.8.4
     kube: ['1.22']
     requirements: []
     incompatibilities: []
-    chart_version: 1.16.0
+    summary: null
+    chart_version: 1.16.4
+    images: ['coredns/coredns:1.8.4']
   - version: 1.8.0
     kube: ['1.21']
     requirements: []
     incompatibilities: []
-    chart_version: 1.14.0
+    summary: null
+    chart_version: 1.15.1
+    images: ['coredns/coredns:1.8.0']
   - version: 1.7.0
     kube: ['1.19']
     requirements: []
     incompatibilities: []
+    summary: null
   - version: 1.6.7
     kube: ['1.18']
     requirements: []
     incompatibilities: []
+    summary: null
   - version: 1.6.5
     kube: ['1.17']
     requirements: []
     incompatibilities: []
+    summary: null
   - version: 1.6.2
     kube: ['1.16']
     requirements: []
     incompatibilities: []
+    summary: null
   - version: 1.3.1
     kube: ['1.15', '1.14']
     requirements: []
     incompatibilities: []
+    summary: null
   - version: 1.2.6
     kube: ['1.13']
     requirements: []
     incompatibilities: []
+    summary: null
   - version: 1.2.2
     kube: ['1.12']
     requirements: []
     incompatibilities: []
+    summary: null
   - version: 1.1.3
     kube: ['1.11']
     requirements: []
     incompatibilities: []
+    summary: null
   - version: 1.0.6
     kube: ['1.10']
     requirements: []
     incompatibilities: []
+    summary: null
   - version: 1.0.1
     kube: ['1.09']
     requirements: []
     incompatibilities: []
+    summary: null
   name: coredns
 - icon: https://avatars.githubusercontent.com/u/112438027?s=200&v=4
   git_url: https://github.com/cloudnative-pg/cloudnative-pg
