--- a/assets/package.json
+++ b/assets/package.json
@@ -42,8 +42,13 @@
     "@docsearch/js": "3.5.2",
     "@docsearch/react": "3.5.2",
     "@emotion/is-prop-valid": "1.3.1",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
     "@jumpn/utils-graphql": "0.6.0",
     "@markdoc/markdoc": "0.4.0",
+    "@mui/material": "^7.3.7",
+    "@mui/system": "^7.3.7",
+    "@mui/x-tree-view": "^8.26.0",
     "@nivo/core": "0.99.0",
     "@nivo/geo": "0.99.0",
     "@nivo/line": "0.99.0",
@@ -90,7 +95,6 @@
     "qs": "6.14.0",
     "query-string": "8.1.0",
     "react": "19.2.2",
-    "react-complex-tree": "2.6.1",
     "react-copy-to-clipboard": "5.1.0",
     "react-diff-viewer": "3.1.1",
     "react-dom": "19.2.2",
