--- a/charts/console/templates/nexus-secret.yaml
+++ b/charts/console/templates/nexus-secret.yaml
@@ -1,4 +1,4 @@
-{{- if .Values.nexus.enabled -}}
+{{- if .Values.aiProxy.enabled -}}
 apiVersion: v1
 kind: Secret
 metadata:
@@ -8,5 +8,5 @@ metadata:
 type: Opaque
 stringData:
   config.yaml: |
-{{ toYaml .Values.nexus.config | indent 4 }}
+{{ toYaml .Values.aiProxy.config | indent 4 }}
 {{- end }}
