--- a/static/compatibilities/contour.yaml
+++ b/static/compatibilities/contour.yaml
@@ -2,6 +2,7 @@ icon: https://avatars.githubusercontent.com/u/54918165?s=48&v=4
 git_url: https://github.com/projectcontour/contour
 release_url: https://github.com/projectcontour/contour/releases/tag/v{vsn}
 helm_repository_url: https://charts.bitnami.com/bitnami
+eolApiSlug: contour
 versions:
 - version: 1.32.1
   kube: ['1.33', '1.32', '1.31']
