--- a/static/compatibilities/argo-cd.yaml
+++ b/static/compatibilities/argo-cd.yaml
@@ -2,6 +2,7 @@ icon: https://raw.githubusercontent.com/pluralsh/plural-artifacts/main/argo-cd/p
 git_url: https://github.com/argoproj/argo-cd
 release_url: https://github.com/argoproj/argo-cd/releases/tag/v{vsn}
 helm_repository_url: https://argoproj.github.io/argo-helm
+eolApiSlug: argocd
 versions:
 - version: 3.2.5
   kube: ['1.35', '1.34', '1.33']
