--- a/static/compatibilities/calico.yaml
+++ b/static/compatibilities/calico.yaml
@@ -3,6 +3,7 @@ git_url: https://github.com/projectcalico/calico
 release_url: https://github.com/projectcalico/calico/releases/tag/v{vsn}
 helm_repository_url: https://docs.tigera.io/calico/charts
 chart_name: tigera-operator
+eolApiSlug: calico
 versions:
 - version: 3.31.3
   kube: ['1.30', '1.29', '1.28', '1.27']
