--- a/static/compatibilities/cert-manager.yaml
+++ b/static/compatibilities/cert-manager.yaml
@@ -2,6 +2,7 @@ icon: https://raw.githubusercontent.com/cert-manager/cert-manager/d53c0b9270f8cd
 git_url: https://github.com/cert-manager/cert-manager
 release_url: https://github.com/cert-manager/cert-manager/releases/tag/v{vsn}
 helm_repository_url: https://charts.jetstack.io
+eolApiSlug: cert-manager
 versions:
 - version: 1.19.0
   kube: ['1.35', '1.34', '1.33', '1.32', '1.31']
