--- a/static/compatibilities/cilium.yaml
+++ b/static/compatibilities/cilium.yaml
@@ -2,6 +2,7 @@ icon: https://avatars.githubusercontent.com/u/21054566?s=48&v=4
 release_url: https://github.com/cilium/cilium/releases/tag/v{vsn}
 helm_repository_url: https://helm.cilium.io/
 helm_values: debug.verbose=flow
+eolApiSlug: cilium
 versions:
 - version: 1.18.6
   kube: ['1.35', '1.34', '1.33']
