--- a/static/compatibilities/gatekeeper.yaml
+++ b/static/compatibilities/gatekeeper.yaml
@@ -3,6 +3,7 @@ git_url: https://github.com/open-policy-agent/gatekeeper
 release_url: https://github.com/open-policy-agent/gatekeeper/releases/tag/v{vsn}
 helm_repository_url: https://open-policy-agent.github.io/gatekeeper/charts
 chart_name: gatekeeper
+eolApiSlug: gatekeeper
 versions:
 - version: 3.21.0
   kube: ['1.34', '1.33', '1.32']
