--- a/static/compatibilities/istio.yaml
+++ b/static/compatibilities/istio.yaml
@@ -3,6 +3,7 @@ git_url: https://github.com/istio/istio
 release_url: https://github.com/istio/istio/releases/tag/{vsn}
 helm_repository_url: https://istio-release.storage.googleapis.com/charts
 chart_name: istiod
+eolApiSlug: istio
 versions:
 - version: 1.28.0
   kube: ['1.34', '1.33', '1.32', '1.31', '1.30']
