--- a/static/compatibilities/kyverno.yaml
+++ b/static/compatibilities/kyverno.yaml
@@ -2,6 +2,7 @@ icon: https://avatars.githubusercontent.com/u/68448710?s=48&v=4
 git_url: https://github.com/kyverno/kyverno
 release_url: https://github.com/kyverno/kyverno/releases/tag/v{vsn}
 helm_repository_url: https://kyverno.github.io/kyverno/
+eolApiSlug: kyverno
 versions:
 - version: 1.16.0
   kube: ['1.34', '1.33', '1.32', '1.31']
