--- a/static/compatibilities/source-controller.yaml
+++ b/static/compatibilities/source-controller.yaml
@@ -1,6 +1,7 @@
 icon: https://avatars.githubusercontent.com/u/52158677?s=200&v=4
 git_url: https://github.com/fluxcd/flux2
 release_url: https://github.com/fluxcd/flux2/releases/tag/v{vsn}
+eolApiSlug: flux
 versions:
 - version: 2.2.0
   kube: ['1.29', 1.28', '1.27', '1.26']
