--- a/charts/console/values.yaml
+++ b/charts/console/values.yaml
@@ -123,7 +123,7 @@ ociAuth:
   imagePullPolicy: IfNotPresent
 
 aiProxy:
-  enabled: true
+  enabled: false
   image:
     repository: nexus
     tag: ~
