--- a/assets/package.json
+++ b/assets/package.json
@@ -43,8 +43,13 @@
     "@docsearch/js": "3.5.2",
     "@docsearch/react": "3.5.2",
     "@emotion/is-prop-valid": "1.3.1",
+    "@emotion/react": "11.14.0",
+    "@emotion/styled": "11.14.1",
     "@jumpn/utils-graphql": "0.6.0",
     "@markdoc/markdoc": "0.4.0",
+    "@mui/material": "7.3.7",
+    "@mui/system": "7.3.7",
+    "@mui/x-tree-view": "8.26.0",
     "@nivo/core": "0.99.0",
     "@nivo/geo": "0.99.0",
     "@nivo/line": "0.99.0",
